--- a/ch20-02-multithreaded.html
+++ b/ch20-02-multithreaded.html
@@ -430,7 +430,7 @@ error: could not compile `hello` due to previous error
 </code></pre>
 <p>編譯通過了！但值得注意的是如果你嘗試 <code>cargo run</code> 並在瀏覽器下請求的話，你會像本章開頭一樣在瀏覽器看到錯誤。我們的函式庫還沒有實際呼叫傳至 <code>execute</code> 的閉包！</p>
 <blockquote>
-<p>注意：你可能聽過對於像是 Haskell 和 Rust 這種嚴格編譯器的語言，會號稱「如果程式碼能編譯，它就能正確執行。」但這全然是正確的。我們的專案能編譯，但是它沒有做任何事！如果我們在寫的是實際的完整專案，這是個寫單元測試的好時機，這能檢查程式碼能編譯<strong>而且</strong>有我們的預期行為。</p>
+<p>注意：你可能聽過對於像是 Haskell 和 Rust 這種嚴格編譯器的語言，會號稱「如果程式碼能編譯，它就能正確執行。」但這不全然是正確的。我們的專案能編譯，但是它沒有做任何事！如果我們在寫的是實際的完整專案，這是個寫單元測試的好時機，這能檢查程式碼能編譯<strong>而且</strong>有我們的預期行為。</p>
 </blockquote>
 <h4 id="在-new-驗證執行緒數量"><a class="header" href="#在-new-驗證執行緒數量">在 <code>new</code> 驗證執行緒數量</a></h4>
 <p>我們對 <code>new</code> 與 <code>execute</code> 的參數沒有做任何事情。讓我們對這些函式本體實作出我們所預期的行為吧。我們先從 <code>new</code> 開始。稍早我們選擇非帶號型別作為 <code>size</code> 的參數，因為負數對於執行緒數量並沒有任何意義。然而，零條執行緒的池一樣也沒有任何意義，但零卻可以是完全合理的 <code>usize</code>。我們要在回傳 <code>ThreadPool</code> 前，加上程式碼來檢查 <code>size</code> 有大於零，並透過 <code>assert!</code> 來判定。如果為零的話就會恐慌，如範例 20-13 所示。</p>
