deploy: f0edaf9fdf48db7668fcb5626cd93e59347cf120

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 <p><em>由 Steve Klabnik 與 Carol Nichols，以及 Rust 社群的貢獻撰寫而成</em></p>
 <p>此版本假設你使用的是 Rust 1.65（於 2022-11-03 發布）或更高的版本，並在所有專案中的 <em>Cargo.toml</em> 都有 <code>edition=&quot;2021&quot;</code> 來使用 Rust 2021 版號。請查看<a href="ch01-01-installation.html">第一章的「安裝」段落</a><!-- ignore -->來安裝或更新 Rust。</p>
 <p>本書的 HTML 格式可以在線上閱讀：<a href="https://doc.rust-lang.org/stable/book/">https://doc.rust-lang.org/stable/book/</a>（<a href="https://rust-lang.tw/book-tw/">正體中文版</a>）。而離線版則包含在 <code>rustup</code> 安裝的 Rust 中，輸入 <code>rustup docs --book</code> 就能開啟。</p>
-<p>社群中也有提供本書的各種[譯本]。</p>
+<p>社群中也有提供本書的各種<a href="appendix-06-translation.html">譯本</a>。</p>
 <p>本書也有由 <a href="https://nostarch.com/rust">No Starch Press 出版平裝與電子版格式</a>。</p>
 <blockquote>
 <p><strong>🚨 想要更有互動的學習體驗？來嘗試不同的 Rust Book，賣點有：隨堂測驗、重點提示、視覺化呈現，更多都在</strong> <a href="https://rust-book.cs.brown.edu">https://rust-book.cs.brown.edu</a></p>
